Add Arc Furnace mode UI & misc refactors
Add Arc Furnace UI elements, language entries and networking: introduce a SelectEnumButton for ArcFurnace modes, add ArcFurnaceSetModePayload, and register translations/container text. Improve SelectEnumButton (value setting, custom rendering of textures/text) and EnergyWidget (compact formatting, shift-to-show full amounts, use Math.clamp). Update model/datagen code: add getItemModelLocation helper, use ItemLike casts where needed, and normalize generated item model JSON (textures/display ordering). Remove/clean up MultiblockTypeInit usage from multiple blocks and tidy various style/whitespace issues across many classes. Also add several new classes (e.g. IndustriaMultiblockControllerBlockEntity, RecyclingRecipe) and other supportive utility/blockentity changes.